@@ -8,6 +8,7 @@ ver 3.4.1
 * Support OSC 5380;color:key and OSC 5381;color:key.
 * 'mlcc color [color name]' returns current rgb of specified colors.
 * Bug fixes:
+  SF Bug #72 (Thanks to http://sf.net/u/p2all)
   Fix a bug which disabled "\x1b]5381;/dev/...;pty_name\x07". (enbugged at 3.3.8)
   Fix "is_auto_encoding" of OSC 5379 which didn't work.
   Fix a bug which disabled "xft" checkbox of mlconfig.
